Add some changes in front(add new menu item)

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -45,3 +45,23 @@
 .icon{
     margin-right: 15px;
 }
+
+.toggle-button {
+        background-color: #e2e8f0;
+        color: #4a5568;
+        border: none;
+        padding: 0.5rem 1rem;
+        border-radius: 0.25rem;
+        transition: background-color 0.3s, color 0.3s;
+        cursor: pointer;
+    }
+
+    .toggle-button.active {
+        background-color: #4299e1;
+        color: #ffffff;
+    }
+
+    .toggle-button:hover {
+        background-color: #4299e1;
+        color: #ffffff;
+    }
