--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -9,7 +9,7 @@
     <title>
         {% block head_title %}Ca Va CRM{% endblock %}
     </title>
-    <link rel="shortcut icon" type="image/x-icon" href="static/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
@@ -18,9 +18,9 @@
 </head>
 <body class="bg-gray-100">
 {% block body %}
-    <div class="lg:ml-64"> <!-- Сдвиг контента на ширину боковой панели -->
+    <div class="ml-64 mr-20"> <!-- Сдвиг контента на ширину боковой панели -->
          {% include 'core/navbar.html' %}
-        <div class="lg:container lg:mx-auto">
+        <div class="container mx-auto">
             {% block content %}
 
             {% endblock %}
