--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -3,13 +3,12 @@
 {% block head_title %}Ca Va CRM{% endblock %}
 
 {% block content %}
-    <div class="container mx-auto flex flex-col items-center my-12 my-24 ">
-        <!--Left Col-->
-        <div class="flex flex-col w-full  items-start  pb-24 px-6">
-            <h1 class="font-bold text-4xl my-4">Ca Va CRM</h1>
+    <div class="container flex flex-col my-12 my-24">
+    <!--Left Col-->
+    <div class="flex flex-col items-start pb-24 px-6">
+        <h1 class="font-bold text-4xl my-4">Ca Va CRM</h1>
             <p class="leading-normal mb-4">
                 WELCOME to the CRM
-
             </p>
             <div>
 
