Add new templates

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -65,3 +65,7 @@
         background-color: #4299e1;
         color: #ffffff;
     }
+
+    #total-orders{
+        background-color: #4ac1f7;
+    }
