--- a/templates/clients/clients.html
+++ b/templates/clients/clients.html
@@ -10,7 +10,7 @@
                 <button class="bg-blue-700 text-white px-4 rounded hover:bg-blue-600">Найти</button>
             </div>
             <div>
-                <a href="#" class="inline-block bg-blue-500 text-white px-4 py-1 rounded hover:bg-blue-600 flex items-center justify-center">
+                <a href="#" class="inline-block bg-blue-500 text-white text-center px-6 py-0.3 text-decoration-none rounded hover:bg-blue-600 flex items-center justify-center">
                     Импорт клиента
                 </a>
             </div>
