--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -1,5 +1,21 @@
 {% extends 'core/base.html' %}
 {% load static %}
 {% block content %}
+    {% include 'dashboard/status.html' %}
+    <div class="col">
+        <div class="col-md">
+            <div class="card card_body">
+                <a class="btn btn-primary  btn-block " href="">Создать новый заказ</a>
+                <table class="table table-sm mt-2">
+                    <tr>
+                        <th>Название</th>
+                        <th>Дата заказа</th>
+                        <th>Исполнитель</th>
+                        <th>Статус</th>
+                    </tr>
 
+                </table>
+            </div>
+        </div>
+    </div>
 {% endblock content %}
