--- a/templates/clients/clients.html
+++ b/templates/clients/clients.html
@@ -5,15 +5,14 @@
      <h1 class="text-2xl font-semibold text-gray-700">Клиенты</h1>
     <hr class="border-b-2 border-gray-300 my-2 mb-10">
         <div class="flex justify-between mb-4">
-            <div class="flex w-full mr-2">
+            <div class="flex w-full mr-2 fa-pen-to-square">
                 <input type="search" placeholder="Поиск клиента..." class="border border-gray-200 px-4 mr-5 rounded w-full">
                 <button class="bg-blue-700 text-white px-4 rounded hover:bg-blue-600">Найти</button>
-            </div>
-            <div>
-                <a href="#" class="inline-block bg-blue-500 text-white text-center px-6 py-0.3 text-decoration-none rounded hover:bg-blue-600 flex items-center justify-center">
+                 <a href="#" class=" flex  bg-blue-500 text-white text-center px-6 ml-3 text-decoration-none rounded hover:bg-blue-600  items-center justify-center">
                     Импорт клиента
                 </a>
             </div>
+
         </div>
         <table class="w-full border-collapse border border-gray-200">
                 {% if not clients%}
