--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -1,6 +1,8 @@
 {% extends 'core/base.html' %}
 {% load static %}
 {% block content %}
+        <h1 class="text-2xl mt-4 font-semibold text-gray-700">Доска заказов</h1>
+    <hr class="border-b-2 border-gray-300 my-2 mb-10">
     {% include 'dashboard/status.html' %}
     <div class="col">
         <div class="col-md">
