--- a/templates/clients/clients.html
+++ b/templates/clients/clients.html
@@ -4,21 +4,31 @@
     <div class="mt-8 mb-4">
      <h1 class="text-2xl font-semibold text-gray-700">Клиенты</h1>
     <hr class="border-b-2 border-gray-300 my-2 mb-10">
-        <form class="p-3" method="post" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    <input type="file" name="files" id="files" multiple class="hidden">
-                    <label for="files" class="bg-blue-200 text-black px-4 py-1 rounded hover:bg-blue-600 cursor-pointer">Выберите файлы</label>
-                    <button type="submit" class="bg-blue-400 text-white px-4 py-1 rounded hover:bg-blue-600">Импортировать</button>
-                </form>
+        <form method="post" action="{% url 'import_clients' %}" enctype="multipart/form-data">
+            {% csrf_token %}
+            <div class="mb-3 mt-3 d-flex align-items-center justify-content-end">
+                <div class="custom-file ">
+                    <input type="file" class="custom-file-input" id="customFile" name="files" multiple accept=".xlsx, .xls">
+                </div>
+                <button type="submit" class="btn btn-primary">Импортировать</button>
+            </div>
+        </form>
         <div class="flex justify-between mb-4">
-           <div class="flex w-full mr-2 fa-pen-to-square">
+           <div class="flex w-full fa-pen-to-square">
                 <input type="search" placeholder="Поиск клиента..." class="border border-gray-200 px-4 py-2 mr-5 rounded w-full">
                 <button class="bg-blue-700 text-white px-4 rounded hover:bg-blue-600 py-2">Найти</button>
             </div>
 
         </div>
+
         <table class="w-full border-collapse border border-gray-200">
-                {% if not clients%}
+                {% if clients%}
+                    <div class="d-flex justify-content-between">
+                        <h6>Всего клиентов: {{ clients.count }}</h6>
+                        {% if  request.user.is_staff %}
+                            <a href="{% url 'clients_delete_all'%}" class="text-red-500 hover:underline">Удалить всех</a>
+                        {% endif %}
+                    </div>
                     <thead class="bg-gray-100">
                         <tr>
                             <th class="py-2 px-4 border border-gray-200">ФИО</th>
@@ -30,10 +40,12 @@
                      {% for client in clients %}
                     <tr>
                         <td class="py-2 px-4 border border-gray-200">{{ client.full_name }}</td>
-                        <td class="py-2 px-4 border border-gray-200">{{ client.phone_number }}</td>
-                        <td class="py-2 px-4 border border-gray-200">
-                            <a href="{% url 'client_details' client.id %}" class="text-blue-500 hover:underline mr-2">Просмотр</a>
-                            <a href="{% url 'client_delete' client.id %}" class="text-red-500 hover:underline">Удалить</a>
+                        <td class="py-2 px-4 border border-gray-200">{{ client.phone }}</td>
+                        <td class="py-2 px-4 border d-flex justify-content-end border-gray-200">
+                            <a href="{% url 'client_details' client.id %}" class="text-blue-500 hover:underline pr-5">Просмотр</a>
+                            {% if  request.user.is_staff %}
+                                <a href="{% url 'client_delete' client.id %}" class="text-red-500 hover:underline">Удалить</a>
+                            {% endif %}
                         </td>
                     </tr>
 
