--- a/templates/core/navbar.html
+++ b/templates/core/navbar.html
@@ -13,16 +13,16 @@
                 Клиенты
             </div>
         </a>
-        <a href="{% url 'business_analytics' %}" class="menu-item flex ml-3 items-center hover:border border-white rounded p-2">
-             <div class="icon">
-                <i style="margin-right: 5px" class="fa fa-pie-chart" aria-hidden="true"></i>
-                Аналитика
-            </div>
-        </a>
         <a href="{% url 'dashboard' %}" class="menu-item flex ml-3 items-center hover:border border-white rounded p-2">
              <div class="icon">
                 <i style="margin-right: 5px" class="fa fa-th-large" aria-hidden="true"></i>
                  Доска заказов
+            </div>
+        </a>
+        <a href="{% url 'business_analytics' %}" class="menu-item flex ml-3 items-center hover:border border-white rounded p-2">
+             <div class="icon">
+                <i style="margin-right: 5px" class="fa fa-pie-chart" aria-hidden="true"></i>
+                Аналитика
             </div>
         </a>
          <a href="#" class="menu-item flex ml-3 items-center hover:border border-white rounded p-2">
@@ -34,10 +34,10 @@
 
     </div>
     <div >
-        <div class="ml-1 text-white bottom-0 flex justify-between mb-2">
-          <a href="{% url 'user_logout' %}" class="menu-item flex  items-center hover:border border-white rounded p-2">
-             <div class="">
-                 <i style="margin-right: 2px" class="fa fa-user-circle" aria-hidden="true"></i>
+        <div class=" text-white bottom-0 flex justify-between rounded menu-item pb-3 pt-3">
+          <a href="{% url 'user_logout' %}" class=" text-white text-decoration-none flex  hover:border border-white  ">
+             <div class="m-0">
+
                   {{ request.user.first_name }} {{ request.user.last_name }}
             </div>
             </a>
