--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -1,19 +1,19 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="Dummy Banking System" />
+    <meta name="description" content="CRM system for atelier Ca Va" />
     <meta name="author" content="Sidarenka Timafey" />
     <title>
         {% block head_title %}Ca Va CRM{% endblock %}
     </title>
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/main.css' %}">
     {% block head_extra %}{% endblock %}
 
 </head>
@@ -22,6 +22,7 @@
     <div class="ml-64 mr-20"> <!-- Сдвиг контента на ширину боковой панели -->
          {% include 'core/navbar.html' %}
         <div class="container mx-auto">
+            {% include 'core/messages.html' %}
             {% block content %}
 
             {% endblock %}
